[tool.poetry]
name = "Peng"
version = "0.1.0"
description = ""
authors = ["Jarmos-san <somraj.1994@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = {extras = ["markdown"], version = "^4.5.4"}

[tool.poetry.dev-dependencies]
invoke = "^1.5.0"
livereload = "^2.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
